--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="containerTextHero">
             <!--teks-->
             <h2 class="title">Airlangga</h2>
-            <h2>🙌Hi mate, I am Airlangga</h2>
+            <h2>🙌Hi mate, I am Airlangga Permana</h2>
             <p class="subtitle">I made this website thru simetri cihuy</p>
         </div>
     </div>
