--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     />
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 <body>
     <nav>
@@ -22,7 +24,7 @@
             <li>Contacts</li>
         </ul>
     </nav>
-    <div class="containerHero">
+    <div  class="containerHero">
         <div>
            <!--gambar--> 
            <img src="./aset/windah.jpg.jpg"/>
@@ -36,7 +38,7 @@
     </div>
 
     <!-- about us -->
-     <div class="flex py-16 px-[133px] flex-row gap-24">
+     <div data-aos="fade-up" class="flex py-16 px-[133px] flex-row gap-24">
         <img src="./aset/windah.jpg.jpg" class="w-96 h-96"/>
         <div class="flex flex-col">
             <h2 class="text-5xl font-bold mb-6">About Me</h2>
@@ -65,11 +67,11 @@
       <div
         class="w-full px-4 md:px-10 flex flex-col gap-y-4 md:gap-y-8 justify-between items-center"
       >
-        <div
+        <div 
           class="flex flex-col gap-y-4 md:flex-row md:gap-x-8 md:gap-8 lg:gap-16"
         >
           <div class="flex flex-col w-full gap-y-2 md:w-1/3">
-            <img src="./assets/Image.png" />
+            <img src="./assets/Image.png"/>
             <p class="font-bold text-gray-700 md:text-[24px]">Free Bird</p>
             <p class="md:text-[20px]">Cihuy</p>
           </div>
@@ -123,7 +125,7 @@
           <div class="flex flex-col">
             <label for="fname">Your Name:</label>
             <input
-              placeholder="Nadia Lovely"
+              placeholder="Airlangga"
               class="border border-gray-400 p-2 rounded-md"
               type="text"
               id="fname"
@@ -133,7 +135,7 @@
           <div class="flex flex-col">
             <label for="email">Email:</label>
             <input
-              placeholder="nadialovely@gmail.com"
+              placeholder="airlanggapermana56@gmail.com"
               class="border border-gray-400 p-2 rounded-md"
               type="email"
               id="email"
@@ -166,7 +168,7 @@
     >
       <h2 class="text-3xl font-bold md:text-5xl">Thank You</h2>
       <p class="text-balance md:max-w-[400px] md:mx-auto">
-        Do you have great idea and want to share. Let’s make something amazing
+        Do you have great idea and want to share. Let's make something amazing
         together
       </p>
       <div class="flex flex-col md:flex-row gap-2 mx-auto w-full">
@@ -184,13 +186,13 @@
         </button>
       </div>
     </section>
-
+    
     <footer class="bg-blue-800 px-4 py-12 md:py-32 md:px-16 lg:px-[133px]">
       <div class="flex flex-col">
         <div
           class="flex flex-col md:flex-row md:justify-between md:items-center"
         >
-          <h2 class="text-white text-2xl font-bold">Nadia Lovely</h2>
+          <h2 class="text-white text-2xl font-bold">Airlangga</h2>
           <div
             class="text-white flex flex-col md:flex-row md:justify-around gap-4 mt-4 md:mt-0"
           >
@@ -214,4 +216,7 @@
       </div>
     </footer>
 </body>
+<script>
+    AOS.init();
+  </script>
 </html>
