--- a/index.html
+++ b/index.html
@@ -16,20 +16,32 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 <body>
-    <nav>
-        <h1>Airlangga</h1>
-        <ul> 
-            <li>About Me</li>
-            <li>Works</li>
-            <li>Contacts</li>
-        </ul>
+    <nav data-aos="fade-down" data-aos-duration="2000">
+        <h1 class="font-bold text-3xl">Airlangga Gilang Permana</h1>
+    <ul> 
+        <button 
+          onclick="location.href='#about-me'" 
+          style="background-color: #007bff; color: white; border: none; border-radius: 50px; padding: 10px 20px; cursor: pointer; font-size: 16px;">
+          About Me
+        </button>
+        <button 
+          onclick="location.href='#My Skill'" 
+          style="background-color: #007bff; color: white; border: none; border-radius: 50px; padding: 10px 20px; cursor: pointer; font-size: 16px;">
+          My Skill
+        </button>
+        <button 
+          onclick="location.href='#contacts'" 
+          style="background-color: #007bff; color: white; border: none; border-radius: 50px; padding: 10px 20px; cursor: pointer; font-size: 16px;">
+          Contacts
+        </button>
+    </ul>
     </nav>
-    <div  class="containerHero">
+    <div data-aos="fade-left" data-aos-duration="2000" class="containerHero">
         <div>
            <!--gambar--> 
-           <img src="./aset/windah.jpg.jpg"/>
+           <img src="./aset/windah.jpg.jpg" class="w-96 h-96"/>
         </div>
-        <div class="containerTextHero">
+        <div data-aos="fade-left" data-aos-duration="2000" class="containerTextHero">
             <!--teks-->
             <h2 class="title">Airlangga</h2>
             <h2>🙌Hi mate, I am Airlangga</h2>
@@ -38,79 +50,63 @@
     </div>
 
     <!-- about us -->
-     <div data-aos="fade-up" class="flex py-16 px-[133px] flex-row gap-24">
+     <div data-aos="fade-up" data-aos-duration="2000" class="flex py-16 px-[133px] flex-row gap-24">
+      <section id="about-me"></section>
         <img src="./aset/windah.jpg.jpg" class="w-96 h-96"/>
         <div class="flex flex-col">
             <h2 class="text-5xl font-bold mb-6">About Me</h2>
             <div class="flex flex-col gap-4">            
             <p class="text-base text-[#4B5563]">
-                I'm a passionate, self-proclaimed designer who specializes in full stack development (React.js & Node.js). 
-                I am very enthusiastic about bringing the technical and visual aspects of digital products to life. User experience, 
-                pixel perfect design, and writing clear, readable, highly performant code matters to me.
+              Nama saya Airlangga, seorang yang sangat tertarik dengan dunia teknologi dan pengembangan perangkat lunak. 
+              Sejak kecil, saya selalu tertarik dengan cara kerja komputer dan internet, yang akhirnya 
+              mendorong saya untuk mendalami ilmu komputer. Saya percaya bahwa teknologi memiliki potensi 
+              besar untuk memecahkan berbagai masalah di kehidupan sehari-hari, dan itulah yang membuat saya 
+              semangat untuk terus belajar dan mengembangkan keterampilan saya, terutama dalam bidang web 
+              development dan pemrograman.
             </p>
             <p class="text-base text-[#4B5563]">
-                I began my journey as a web developer in 2015, and since then, I've continued to grow and evolve as a developer, 
-                taking on new challenges and learning the latest technologies along the way. Now, in my early thirties, 
-                7 years after starting my web development journey, I'm building cutting-edge web applications using modern technologies such as Next.
-                js, TypeScript, Nestjs, Tailwindcss, Supabase and much more.
+              Selain fokus pada karier dan pengembangan diri, saya juga memiliki minat besar terhadap seni dan desain. 
+              Saya percaya bahwa keseimbangan antara kreativitas dan teknologi adalah kunci untuk menciptakan solusi yang 
+              inovatif dan efektif. Di luar pekerjaan, saya menikmati berbagai aktivitas seperti membaca, berpetualang, dan 
+              bermain game, yang membantu saya untuk tetap kreatif dan berpikir out of the box. Saya berkomitmen untuk terus 
+              belajar, beradaptasi dengan perkembangan zaman, dan memberikan kontribusi positif di bidang yang saya geluti.
             </p>
             </div>
         </div>
-     </div>
-
-     <section
+      </div>
+     <section id="My Skill"></section>
+     <section 
       class="flex flex-col pt-16 px-6 lg:px-16 lg:px-[133px] justify-center items-center"
     >
       <h2 class="text-3xl font-bold mb-4 md:mb-12 md:text-5xl">
-        My Latest Work
+        My Skill
       </h2>
       <div
+
         class="w-full px-4 md:px-10 flex flex-col gap-y-4 md:gap-y-8 justify-between items-center"
       >
         <div 
           class="flex flex-col gap-y-4 md:flex-row md:gap-x-8 md:gap-8 lg:gap-16"
         >
           <div class="flex flex-col w-full gap-y-2 md:w-1/3">
-            <img src="./assets/Image.png"/>
-            <p class="font-bold text-gray-700 md:text-[24px]">Free Bird</p>
-            <p class="md:text-[20px]">Cihuy</p>
+            <img src="./aset/mikrotikkk.png"/>
+            <p class="font-bold text-gray-700 md:text-[24px]">Configuration Mikrotik</p>
           </div>
           <div class="flex flex-col w-full gap-y-2 md:w-1/3">
-            <img src="./assets/Image-1.png" />
-            <p class="font-bold text-gray-700 md:text-[24px]">Purple Haze</p>
-            <p class="md:text-[20px]">Jimmy Hendrix</p>
+            <img src="./aset/profesi-programmer.jpg" />
+            <p class="font-bold text-gray-700 md:text-[24px]">Web Development</p>
           </div>
           <div class="flex flex-col w-full gap-y-2 md:w-1/3">
-            <img src="./assets/Image-2.png" />
-            <p class="font-bold text-gray-700 md:text-[24px]">You Really Got</p>
-            <p class="md:text-[20px]">The Kinks</p>
+            <img src="./aset/asj.png" />
+            <p class="font-bold text-gray-700 md:text-[24px]">Administrasi System Jaringan</p>
           </div>
         </div>
-        <div
-          class="flex flex-col gap-y-4 md:gap-x-8 md:flex-row md:gap-8 lg:gap-16"
-        >
-          <div class="flex flex-col w-full gap-y-2 md:w-1/3">
-            <img src="./assets/Image-3.png" />
-            <p class="font-bold text-gray-700 md:text-[24px]">Free Bird</p>
-            <p class="md:text-[20px]">Cihuy</p>
-          </div>
-          <div class="flex flex-col w-full gap-y-2 md:w-1/3">
-            <img src="./assets/Image-4.png" />
-            <p class="font-bold text-gray-700 md:text-[24px]">Purple Haze</p>
-            <p class="md:text-[20px]">Jimmy Hendrix</p>
-          </div>
-          <div class="flex flex-col w-full gap-y-2 md:w-1/3">
-            <img src="./assets/Image-5.png" />
-            <p class="font-bold text-gray-700 md:text-[24px]">You Really Got</p>
-            <p class="md:text-[20px]">The Kinks</p>
-          </div>
-        </div>
-      </div>
+       
     </section>
 
     <section
       class="w-full pt-16 px-6 lg:px-[133px] lg:px-16 flex flex-col md:flex-row md:justify-between md:items-start"
-    >
+    ><section id="contacts"></section>
       <div class="md:w-1/2">
         <h2 class="text-3xl font-bold mb-4 lg:mb-12 md:text-5xl">
           Contact Me!
@@ -173,14 +169,16 @@
       </p>
       <div class="flex flex-col md:flex-row gap-2 mx-auto w-full">
         <button class="bg-blue-700 px-4 w-full md:w-1/2 py-2 rounded-xl">
+          <a href="https://www.instagram.com/airlnggaa_gilang/" target="_blank">
           <div class="flex flex-row gap-x-2 justify-center items-center">
-            <img src="./assets/ic-instagram.png" class="w-[16px] h-[16px]" />
+            <img src="./aset/ic-instagram.png" class="w-[16px] h-[16px]" />
             <p class="text-white">Instagram</p>
           </div>
         </button>
         <button class="bg-blue-700 px-4 w-full md:w-1/2 py-2 rounded-xl">
+          <a href="https://mail.google.com/mail/u/0/?view=cm&tf=1&fs=1&to=airlanggapermana56@gmail.com" target="_blank"></a>
           <div class="flex flex-row gap-x-2 justify-center items-center">
-            <img src="./assets/ic-mail.png" class="w-[18px] h-[16px]" />
+            <img src="./aset/ic-mail.png" class="w-[18px] h-[16px]" />
             <p class="text-white">Email</p>
           </div>
         </button>
@@ -206,8 +204,8 @@
           class="flex flex-col md:flex-row md:justify-between md:items-center"
         >
           <div class="flex flex-row gap-4">
-            <img src="./assets/ic-instagram.png" class="w-[16px] h-[16px]" />
-            <img src="./assets/ic-mail.png" class="w-[18px] h-[16px]" />
+            <img src="./aset//ic-instagram.png" class="w-[16px] h-[16px]" />
+            <img src="./aset/ic-mail.png" class="w-[18px] h-[16px]" />
           </div>
           <p class="text-white text-xs mt-4 md:mt-0">
             Copyright John Doe. 2024
