--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           </div>
         </button>
         <button class="bg-blue-700 px-4 w-full md:w-1/2 py-2 rounded-xl">
-          <a href="https://mail.google.com/mail/u/0/?view=cm&tf=1&fs=1&to=airlanggapermana56@gmail.com" target="_blank"></a>
+          <a href="https://mail.google.com/mail/u/0/?view=cm&tf=1&fs=1&to=airlanggapermana56@gmail.com" target="_blank">
           <div class="flex flex-row gap-x-2 justify-center items-center">
             <img src="./aset/ic-mail.png" class="w-[18px] h-[16px]" />
             <p class="text-white">Email</p>
